--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
+<html>
 
 <head>
+    <meta charset="UTF-8">
     <title>findabuse.email | Putting an IP address, to an abuse contact</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Poppins:100,300,400' rel='stylesheet prefetch'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet prefetch'>
+
+    <link href="style.css" rel="stylesheet">
 </head>
+
+<body>
+    <div id="particles-js"></div>
+    <div class="center-div">
+        <div class="texto">
+            <div class="input">
+                <input class="input-ip" id="check" placeholder="IP address" type="text">
+            </div><span class="fat"></span>
+        </div>
+    </div>
+    <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src="app.js"></script>
+</body>
 
 </html>
